apps/spotify-profile-frontend/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spotify-profile-frontend
  namespace: dev
spec:
  selector:
    app: spotify-profile-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
