apps/spotify-profile-frontend/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-profile-frontend-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "dev-basic-auth"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Frame-Options "DENY" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
      add_header Referrer-Policy "no-referrer" always;
      add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
      add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; object-src 'none'; base-uri 'none'; frame-ancestors 'none';" always;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.spotify-profile.julienprr.com
        - www.dev.spotify-profile.julienprr.com
      secretName: ssl-cert-spotify-profile-frontend
  rules:
    - host: dev.spotify-profile.julienprr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spotify-profile-frontend
                port:
                  number: 80
    - host: www.dev.spotify-profile.julienprr.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spotify-profile-frontend
                port:
                  number: 80
